# mrs-inspector

./: .gitignore  404.html  LICENSE  MANIFEST.in  NOTICE  README.md  index.html  mkdocs.yml  pre-commit-config.yaml  pyproject.toml  setup.cfg  sitemap.xml
api_reference/: index.html
basic_trace/: index.html
custom_modules/: index.html
docs/: api_reference.md  basic_trace.md  custom_modules.md  graph_output.md  index.md  installation.md  usage.md
docs/examples/: basic_trace.md  custom_modules.md  graph_output.md
examples/: __init__.py  exception_trace.json  load_test.json  nested_trace.json  quickstart.py  test_exception.py  test_load.py  test_validate.py  test_wrap.py  trace.json  wrapped_trace.json
github/workflows/: publish.yml  tests.yml
graph_output/: index.html
installation/: index.html
mrs_inspector/: __init__.py  cli.py  graph.py  graph_builder.py  inspector.py  state.py  tracer.py  tree_view.py  utils.py  validator.py  version.py
search/: search_index.json
tests/: test_graph.py  test_inspector.py
usage/: index.html
