[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrs-inspector"
version = "0.1.1"
description = "A structural reasoning inspector for modular reasoning systems (MRS). Provides tracing, phases, exception capture, and graph visualization."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    {name = "RJ Sabouhi", email = "symbolicsuite@gmail.com"}
]


dependencies = [
    "networkx>=3.0",
    "matplotlib>=3.5",
]

classifiers = [
    "Programming Language :: Python :: >=3.9",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["mrs_inspector"]

[tool.setuptools.package-data]
mrs_inspector = ["*.json", "*.png"]

