[project]
name = "mrs_inspector"
version = "1.0.0"
description = "A lightweight tracing and reasoning-structure capture utility."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "RJ Sabouhi", email = "rjsabouhi@gmail.com" }
]
keywords = ["tracing", "inspection", "debugging", "reasoning", "analysis"]


dependencies = [
    "networkx>=3.0",
    "matplotlib>=3.5",
]


[project.urls]
"Homepage" = "https://rjsabouhi.github.io/mrs-inspector/"
"Documentation" = "https://rjsabouhi.github.io/mrs-inspector/"
"Repository" = "https://github.com/rjsabouhi/mrs-inspector"


[tool.setuptools]
package-dir = { "" = "." }
packages = ["mrs_inspector"]


[tool.setuptools.package-data]
mrs_inspector = ["*.json", "*.png"]

